replace pixijs with regl, fix loading on ios

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -103,8 +103,6 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
     opacity: 0;
     display: none;
     /*z-index: 2;*/
